--- a/src/main/resources/templates/MisOrdenesUsuario.html
+++ b/src/main/resources/templates/MisOrdenesUsuario.html
@@ -1,26 +1,38 @@
 <!DOCTYPE html>
 
-<!--
-Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
-Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this template
--->
 <html
   xmlns:th="https://www.thymeleaf.org"
   xmlns:sec="https://www.thymeleaf.org/extras/spring-security"
 >
   <head>
-    <title>TODO supply a title</title>
+    <link rel="shortcut icon" href="" type="image/x-icon">
+    <title>Ordenes Usuario</title>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" th:href="@{/css/estilos2.css}">
   </head>
   <body>
-    <div>Orden creada</div>
-    <div>aca van todas las ordenes</div>
-    <div>USUARIOOOOOOOOO</div>
+    <div class="opacidadgral">
+    <nav th:replace="fragments/navbar::nav"></nav>
+    <h1 class="text-center">ProSkillFinder</h1>
+    
 
-    <table>
-      <h3>Listado de orden</h3>
-      <thead>
+
+    <div class="container">
+      <div class="row justify-content-center">
+          <div class="col-md-8">
+              <h3 class="text-center">Tus Ordenes</h3>
+          </div>
+      </div>
+    </div>
+
+    <div>
+      <table class="table" style="width: 700px; border: 2px solid #FF7F00;">
+        
+      <thead class="tablemo" style="border: 1px solid #FF7F00;">
         <tr>
           <th scope="col">id Orden</th>
           <th scope="col">Nombre Usuario</th>
@@ -28,28 +40,39 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
           <th scope="col">Descripcion del trabajo</th>
           <th scope="col">Estado</th>
           <th scope="col">Valor cotizado por el proveedor</th>
-          <!--<th sec:authorize="hasRole('PROVEEDOR')" scope="col">Acciones</th>-->
+          <th scope="col">Comentario post-servicio</th>
         </tr>
       </thead>
-      <tbody th:each="orden : ${listaOrdenes}">
-        <tr>
+
+      <tbody th:each="orden : ${listaOrdenes}" style="background-color: #333; border: 1px solid #FF7F00;">
+        <tr style="color: #FFFFFF">
           <th th:text="${orden.id}"></th>
           <td th:text="${orden.usuario.nombre}"></td>
           <td th:text="${orden.proveedor.nombre}"></td>
           <td th:text="${orden.comentario}"></td>
           <td th:text="${orden.estadOrden}"></td>
           <td th:text="' $ ' + ${orden.valor}"></td>
+          <td th:text="${orden.comentarioCalificacion}"></td>
           <td>
-            <div th:if="${orden.valor != 0}">
+            <div
+              th:if="${orden.valor != 0} and ${orden.getEstadOrden().toString() == 'COTIZANDO' } "
+            >
               <form th:action="@{/orden/aceptar/__${orden.id}__}" method="post">
                 <input type="hidden" name="ordenId" th:value="${orden.id}" />
-                <button type="submit">Aceptar cotización</button>
+                <button
+                  id="btnAceptarCotizacion"
+                  class="btn btn-primary"
+                  type="button"
+                  onclick="callAllert();"
+                >
+                  Aceptar cotización
+                </button>
               </form>
             </div>
 
             <div>
               <form
-                th:if="${orden.estadOrden.ACTIVA}"
+                th:if="${orden.getEstadOrden().toString() == 'ACTIVA'}"
                 th:action="@{/orden/calificar/__${orden.id}__}"
                 method="post"
               >
@@ -69,20 +92,76 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                     type="text"
                     class="form-control p-4"
                     placeholder="Si quiere agregar comentarios"
-                    name="comentario"
+                    name="comentarioCalificacion"
                     required="required"
                   />
                 </p>
-                <button type="submit">Finalizar/Calificar</button>
+                <button
+                  id="btnFinalizarCalificar"
+                  class="btn btn-secondary btn-sm"
+                  name="otroBoton"
+                  type="button"
+                  onclick="callAllert();"
+                >
+                  Finalizar/Calificar
+                </button>
               </form>
             </div>
           </td>
         </tr>
       </tbody>
     </table>
-  </body>
+  
+  <script type="text/javascript">
+    document
+      .getElementById("btnAceptarCotizacion")
+      .addEventListener("click", function () {
+        swal(
+          "¡Cotización Aceptada!",
+          "Pronto el proveedor se contacatará contigo para coordinar el servicio.",
+          "success"
+        ).then(function () {
+          // Después de mostrar el mensaje, envía el formulario manualmente
+          var form = document
+            .querySelector("#btnAceptarCotizacion")
+            .closest("form");
+          form.submit();
+        });
+      });
 
+    document
+      .getElementsByName("btnFinalizarCalificar")
+      .addEventListener("click", function () {
+        swal(
+          "¡Servicio Finzalidado!",
+          "Gracias por confiar en los servicios de ProSkillFinder",
+          "success"
+        ).then(function () {
+          // Después de mostrar el mensaje, envía el formulario manualmente
+          var form = document
+            .querySelector("#btnFinalizarCalificar")
+            .closest("form");
+          form.submit();
+        });
+      });
+  </script>
   <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
     <li><a class="dropdown-item" href="/logout">Cerrar Sesión</a></li>
   </ul>
+  <section class="botonVolver">
+    <div class="row mt-3">
+      <div class="divVolver">
+        <a th:href="@{/inicio}" class="btn btn-secondary my-2 botonVolver botones">Volver</a>
+      </div>
+    </div>
+  </section>
+  <footer class="pie">
+    <div th:replace="fragments/footer::foot"></div>
+    <div th:replace="fragments/redesS::red_soc"></div>
+</footer>
+</div>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
+      </body>
 </html>
