--- a/src/main/resources/templates/panelProveedor.html
+++ b/src/main/resources/templates/panelProveedor.html
@@ -65,7 +65,7 @@
   <section class="">
     <div class="row mt-3">
       <div class="divVolver">
-        <a th:href="@{/proveedor/panelProveedor}" class="btn btn-secondary my-2 botonVolver botones">Ir Arriba</a>
+        <a th:href="@{/logout}" class="btn btn-secondary my-2 botonVolver botones">Cerrar Sesión</a>
       </div>
     </div>
   </section>
