--- a/src/main/resources/templates/Buscador.html
+++ b/src/main/resources/templates/Buscador.html
@@ -9,6 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" th:href="@{/css/estilos2.css}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
 </head>
 
 <body>
@@ -110,9 +111,20 @@
                             class="card-img-top" alt="Proveedor 1">
                         <div class="card-body">
                             <h5 th:text="${proveedor.nombre}">nombre:</h5>
-                            <p class="card-text">Cantidad de estrellas: <span
-                                    th:if="${proveedor.promedioPuntaje != null}"
-                                    th:text="${proveedor.promedioPuntaje}"></span></p>
+                            <p class="card-text">
+                                Calificación:
+                                <span th:if="${proveedor.promedioPuntaje != null}">
+                                    <span th:each="i : ${#numbers.sequence(1, proveedor.promedioPuntaje)}">
+                                        <i class="fas fa-star"></i>
+                                    </span>
+                                    <span th:unless="${proveedor.promedioPuntaje >= 1}">
+                                        <i class="far fa-star"></i>
+                                    </span>
+                                    <span th:unless="${proveedor.promedioPuntaje == 5}">
+                                        <i class="far fa-star"></i>
+                                    </span>
+                                </span>
+                            </p>
                             <div class="divVolver">
                                 <a th:href="@{/orden/contacto/__${proveedor.id}__}" class="btn btn-primary" id="contac"
                                     th:if="${session.personasession != null}" style="margin:10px">Contactar</a>
