--- a/src/main/resources/templates/MisOrdenes.html
+++ b/src/main/resources/templates/MisOrdenes.html
@@ -2,25 +2,26 @@
 <html lang="es">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="" type="image/x-icon">
-    <title>Ordenes Proveedor</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" th:href="@{/css/estilos2.css}">
-    </head>
-  <body>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="shortcut icon" href="" type="image/x-icon">
+  <title>Ordenes Proveedor</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link rel="stylesheet" th:href="@{/css/estilos2.css}">
+</head>
 
-    <div class="opacidadgral">
+<body>
+
+  <div class="opacidadgral">
     <nav th:replace="fragments/navbarprov::navp"></nav>
     <h1 class="text-center">ProSkillFinder</h1>
 
     <div class="container">
       <div class="row justify-content-center">
-          <div class="col-md-8">
-              <h1 class="text-center">Listado de Ordenes de Proveedor</h1>
-          </div>
+        <div class="col-md-8">
+          <h1 class="text-center">Listado de Ordenes de Proveedor</h1>
+        </div>
       </div>
     </div>
 
@@ -44,10 +45,25 @@
             <td th:text="${orden.comentario}"></td>
             <td th:text="${orden.estadOrden}"></td>
             <td>
-              <a th:href="@{/orden/cancelar/__${orden.id}__}">Cancelar</a>
-              <a th:href="@{/orden/aceptar/__${orden.id}__}">Aceptar cotizacion</a>
-              <a th:href="@{/orden/calificar/__${orden.id}__}">Calificar</a>
+              <form th:if="${orden.getEstadOrden().toString() == 'COTIZANDO'}"
+                th:action="@{/orden/cotizacion/__${orden.id}__}" method="POST">
+                <div class="textoOT">
+                  <input type="number" class="form-control p-4" placeholder="Ingresa el valor de la cotización"
+                    name="valor" required="required" />
+
+                  <div class="boton">
+                    <button class="btn btn-primary btn-block py-3" type="submit">
+                      Enviar Cotización
+                    </button>
+                  </div>
+                </div>
+              </form>
             </td>
+
+            <td>
+              <a th:href="@{/orden/cancelar/__${orden.id}__}">Cancelar</a>
+            </td>
+
           </tr>
         </tbody>
       </table>
@@ -68,10 +84,11 @@
     <footer class="pie">
       <div th:replace="fragments/footer::foot"></div>
       <div th:replace="fragments/redesS::red_soc"></div>
-    </footer> 
-</div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-        crossorigin="anonymous"></script>
-  </body>
+    </footer>
+  </div>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"></script>
+</body>
+
 </html>
