--- a/src/main/resources/templates/Buscador.html
+++ b/src/main/resources/templates/Buscador.html
@@ -129,7 +129,7 @@
         </div>
 
 
-        <div th:if="${#lists.isEmpty(proveedores)}">
+        <div th:if="${#lists.isEmpty(proveedores)}" class="noprov">
             <div class="col-md-4">
                 <div class="card" style="background-color: #000; height: auto;">
                     <div class="card-body">
