--- a/src/main/resources/templates/MisOrdenes.html
+++ b/src/main/resources/templates/MisOrdenes.html
@@ -1,91 +1,116 @@
 <!DOCTYPE html>
-<html lang="es">
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="shortcut icon" href="" type="image/x-icon">
-  <title>Ordenes Proveedor</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-  <link rel="stylesheet" th:href="@{/css/estilos2.css}">
-</head>
 
-<body>
+<html xmlns:th="https://www.thymeleaf.org" xmlns:sec="https://www.thymeleaf.org/extras/spring-security" html lang="es">
+    <head>
+        <title>Ordenes Proveedor</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="shortcut icon" href="" type="image/x-icon">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" th:href="@{/css/estilos2.css}">
+    </head>
+    <body>
+        
+      <div class="opacidadgral">
+        <nav th:replace="fragments/navbarprov::navp"></nav>
+        <h1 class="text-center">ProSkillFinder</h1>
 
-  <div class="opacidadgral">
-    <nav th:replace="fragments/navbarprov::navp"></nav>
-    <h1 class="text-center">ProSkillFinder</h1>
-
-    <div class="container">
-      <div class="row justify-content-center">
-        <div class="col-md-8">
-          <h1 class="text-center">Listado de Ordenes de Proveedor</h1>
-        </div>
+         <div class="container">
+    <div class="row justify-content-center">
+      <div class="col-md-8">
+        <h1 class="text-center">Listado de Ordenes de Proveedor</h1>
       </div>
     </div>
+  </div>
+ 
 
-    <div>
-      <table class="table" style="width: 700px; border: 2px solid #FF7F00;">
-        <h3 class="text-center"> Listado de ordenes</h3>
-        <thead class="tablemo" style="width: 700px; border: 3px solid #FF7F00; ">
-          <th scope="col">id Orden</th>
-          <th scope="col">Nombre Usuario</th>
-          <th scope="col">Nombre Proveedor</th>
-          <th scope="col">Comentario</th>
-          <th scope="col">Estado</th>
-          <th scope="col">Acciones</th>
-          <th scope="col"> </th>
-        </thead>
-        <tbody th:each="orden : ${listaOrdenes}" style="background-color: #333; border: 1px solid #FF7F00;">
-          <tr style="color: #FFFFFF">
-            <th th:text="${orden.id}"></th>
-            <td th:text="${orden.usuario.nombre}"></td>
-            <td th:text="${orden.proveedor.nombre}"></td>
-            <td th:text="${orden.comentario}"></td>
-            <td th:text="${orden.estadOrden}"></td>
-            <td>
-              <form th:if="${orden.getEstadOrden().toString() == 'COTIZANDO'}"
-                th:action="@{/orden/cotizacion/__${orden.id}__}" method="POST">
-                <div class="textoOT">
-                  <input type="number" class="form-control p-4" placeholder="Ingresa el valor de la cotización"
-                    name="valor" required="required" />
+  <div>
+    <table class="table" style="width: 1300px; border: 2px solid #FF7F00;">
+      <h3 class="text-center"> Listado de ordenes</h3>
+      <thead class="tablemo" style="width: 1000px; border: 3px solid #FF7F00; ">
+      <th scope="col">id Orden</th>
+        <th scope="col">Nombre Usuario</th>
+        <th scope="col">Nombre Proveedor</th>
+        <th scope="col">Descripcion del trabajo</th>
+        <th scope="col">Estado</th>
+        <th scope="col">Cotizacion</th>
+        <th scope="col"></th>
+        <th scope="col"></th>
+          </tr>
+      </thead>
 
-                  <div class="boton">
-                    <button class="btn btn-primary btn-block py-3" type="submit">
+      <tbody th:each="orden : ${listaOrdenes}" style="background-color: #333; border: 1px solid #FF7F00;">
+        <tr style="color: #FFFFFF">
+          <th th:text="${orden.id}"></th>
+          <td th:text="${orden.usuario.nombre}"></td>
+          <td th:text="${orden.proveedor.nombre}"></td>
+          <td th:text="${orden.comentario}"></td>
+          <td th:text="${orden.estadOrden}"></td>
+
+          <td >  
+
+              <form th:if="${orden.getEstadOrden().toString() == 'COTIZANDO'}" th:action="@{/orden/cotizacion/__${orden.id}__}" method="POST">
+                <!-- Button trigger modal -->
+              <button type="button" class="btn btn-primary" style="background-color :rgb(111, 111, 226);" data-bs-toggle="modal" data-bs-target="#staticBackdrop">Cotizar</button>
+                <!-- Modal -->
+              <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+                <div class="modal-dialog">
+                  <div class="modal-content" style="background-color: #333; border: 1px solid #FF7F00;">
+                    <div class="modal-header">
+                      <h1 class="modal-title fs-5" id="staticBackdropLabel">Cotizacion</h1>
+                      
+                      <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                      <a>Ingresa tu monto:</a>
+                      <p>
+                        <input type="number" class="form-control p-4" name="valor" required="required" th:value="${orden.id}"/>
+                      </p>
+                    </div>
+                    <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" th:href="@{/orden/Cancelar/${orden.id}}">Cancelar Cotizacion</button>
+                    <!--<button type="submit" class="btn btn-primary" th:href="@{/orden/aceptar/${orden.id}}">Aceptar Cotizacion</button>-->
+                    <button class="btn btn-primary" type="submit">
                       Enviar Cotización
-                    </button>
+                  </button>
+
+                    </div>
+                    
                   </div>
                 </div>
-              </form>
-            </td>
-
-            <td>
-              <a th:href="@{/orden/cancelar/__${orden.id}__}">Cancelar</a>
-            </td>
-
-          </tr>
-        </tbody>
-      </table>
-    </div>
-
-    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-      <li><a class="dropdown-item" href="/logout">Cerrar Sesión</a></li>
-    </ul>
-
-    <section class="botonVolver">
-      <div class="row mt-3">
-        <div class="divVolver">
-          <a th:href="@{/inicio}" class="btn btn-secondary my-2 botonVolver botones">Volver</a>
-        </div>
-      </div>
-    </section>
-
-    <footer class="pie">
-      <div th:replace="fragments/footer::foot"></div>
-      <div th:replace="fragments/redesS::red_soc"></div>
-    </footer>
+              </div>
+              
+            </form>        
+          </td>
+          
+          <td> <a class="btn btn-primary" style="background-color : rgb ( 111,111, 226)" th:if="${orden.getEstadOrden().toString() == 'COTIZANDO'}" th:href="@{/orden/cancelar/__${orden.id}__}" >Cancelar</a></td>
+          <td></td>
+        </tr>
+      </tbody>
+    </table>
   </div>
+
+  <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+    <li><a class="dropdown-item" href="/logout">Cerrar Sesión</a></li>
+  </ul>
+
+  <section class="">
+    <div class="row mt-3">
+      <div class="divVolver">
+        <a href="/proveedor/panelProveedor" class="btn btn-secondary my-2 botonVolver botones">Volver</a>
+      </div>
+    </div>
+  </section>
+
+  <footer class="pie">
+    <div th:replace="fragments/footer::foot"></div>
+    <div th:replace="fragments/redesS::red_soc"></div>
+  </footer>
+
+  <script src="js/heafoo.js"></script>
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
     crossorigin="anonymous"></script>
