--- a/src/main/resources/templates/panelProveedor.html
+++ b/src/main/resources/templates/panelProveedor.html
@@ -15,79 +15,83 @@
 <body>
 
   <div class="opacidadgral">
-  <nav th:replace="fragments/navbarprov::navp"></nav>
-  <h1 class="text-center">ProSkillFinder</h1>
-  <h1 class="indh3">Mi Perfil</h1>
-  <div class="col-md-4">
-    <div class="container">
-      <p id="textbien">
-        BIENVENIDO
-        <span th:if="${session.personasession != null}" th:text=" ${session.personasession.nombre} "></span>
-      </p>
+    <nav th:replace="fragments/navbarprov::navp"></nav>
+    <h1 class="text-center">ProSkillFinder</h1>
+    <h1 class="indh3">Mi Perfil</h1>
+    <div class="col-md-4">
+      <div class="container">
+        <p id="textbien">
+          BIENVENIDO
+          <span th:if="${session.personasession != null}" th:text=" ${session.personasession.nombre} "></span>
+        </p>
+      </div>
     </div>
-  </div>
 
 
-  <div class="pantalla">
+    <div class="pantalla">
 
-    <div class="izquiercon">
+      <div class="izquiercon">
 
 
         <div class="InfoProv">
 
-            <form th:action="@{/orden/crearOrden}" method="POST">
-                <div class="fotoPerfil">
-                    <img class="rounded mx-auto d-block" th:src="'data:image/jpeg;base64,' + ${imagen}" alt="Imagen de perfil" width="150" height="150">
-                </div>
-                <li class="py-2"><i class="fa fa-check text-primary mr-3"></i>Nombre: <span
-                        th:text="${proveedor.nombre}"></span></li>
-                <li class="py-2"><i class="fa fa-check text-primary mr-3"></i>Direccion: <span
-                        th:text="${proveedor.direccion}"></span></li>
-                <li class="py-2"><i class="fa fa-check text-primary mr-3"></i>Honorarios por hora: <span
-                        th:text="${proveedor.honorarioHora}"></span></li>
-                <li class="py-2"><i class="fa fa-check text-primary mr-3"></i>Telefono: <span
-                        th:text="${proveedor.telefono}"></span></li>
-                <li class="py-2"><i class="fa fa-check text-primary mr-3"></i>Presentacion: <span
-                        th:text="${proveedor.presentacion}"></span></li>
-            </form>
+          <form th:action="@{/orden/crearOrden}" method="POST">
+            <div class="fotoPerfil">
+              <img class="rounded mx-auto d-block" th:src="'data:image/jpeg;base64,' + ${imagen}" alt="Imagen de perfil"
+                width="150" height="150">
+            </div>
+            <li class="py-2"><i class="fa fa-check text-primary mr-3"></i>Nombre: <span
+                th:text="${proveedor.nombre}"></span></li>
+            <li class="py-2"><i class="fa fa-check text-primary mr-3"></i>Direccion: <span
+                th:text="${proveedor.direccion}"></span></li>
+            <li class="py-2"><i class="fa fa-check text-primary mr-3"></i>Honorarios por hora: <span
+                th:text="${proveedor.honorarioHora}"></span></li>
+            <li class="py-2"><i class="fa fa-check text-primary mr-3"></i>Telefono: <span
+                th:text="${proveedor.telefono}"></span></li>
+            <li class="py-2"><i class="fa fa-check text-primary mr-3"></i>Presentacion: <span
+                th:text="${proveedor.presentacion}"></span></li>
+          </form>
 
         </div>
 
 
 
-    </div>
-
-    <div class="derecha">
-
-     <div class="bprov">
-        <h5 class="text-center">Si necesita contactar algun servicio debe registrarse como usuario</h5>
-
-        <a th:if="${session.personasession != null}" th:href="@{/orden/ordenes}" id="botonppp" class="btn btn-secondary my-2 botones">Ver mis ordenes
-        </a>
-
-
-        <a th:if="${session.personasession != null}" th:href="@{perfil}" id="botonppp" class="btn btn-secondary my-2 botones">Editar Perfil</a>
-
-         <a th:if="${session.personasession != null}" th:href="@{/logout}" id="botonppp" class="btn btn-secondary my-2 botones">Cerrar Sesión</a>
-    
       </div>
 
-    </div>    
+      <div class="derecha">
+
+        <div class="bprov">
+          <h5 class="text-center">Si necesita contactar algun servicio debe registrarse como usuario</h5>
+
+          <a th:if="${session.personasession != null}" th:href="@{/orden/ordenes}" id="botonppp"
+            class="btn btn-secondary my-2 botones">Ver mis ordenes
+          </a>
+
+
+          <a th:if="${session.personasession != null}" th:href="@{perfil}" id="botonppp"
+            class="btn btn-secondary my-2 botones">Editar Perfil</a>
+
+          <a th:if="${session.personasession != null}" th:href="@{/logout}" id="botonppp"
+            class="btn btn-secondary my-2 botones">Cerrar Sesión</a>
+
+        </div>
+
+      </div>
+    </div>
+    <section class="botonVolver">
+      <div class="row mt-3">
+        <div class="divVolver">
+          <a th:href="@{/proveedor/panelProveedor}" class="btn btn-secondary my-2 botonVolver botones">Ir Arriba</a>
+        </div>
+      </div>
+    </section>
+
+    <footer class="pie">
+      <div th:replace="fragments/footer::foot"></div>
+      <div th:replace="fragments/redesS::red_soc"></div>
+    </footer>
+
   </div>
-  <section class="botonVolver">
-    <div class="row mt-3">
-      <div class="divVolver">
-        <a th:href="@{/proveedor/panelProveedor}" class="btn btn-secondary my-2 botonVolver botones">Ir Arriba</a>
-      </div>
-    </div>
-  </section>
-
-  <footer class="pie">
-    <div th:replace="fragments/footer::foot"></div>
-    <div th:replace="fragments/redesS::red_soc"></div>
-  </footer>
-
-</div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
