--- a/src/main/resources/templates/LoginUsuario.html
+++ b/src/main/resources/templates/LoginUsuario.html
@@ -1,17 +1,15 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ProSkillFinder</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="css/estilos2.css" />
-  </head>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>ProSkillFinder</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
+  <link rel="stylesheet" href="css/estilos2.css" />
+</head>
+
 <body>
 
 
@@ -20,17 +18,14 @@
     <h1 class="text-center">ProSkillFinder</h1>
 
 
-    <div
-      th:if="${inactivo != null}"
-      class="card text-white bg-success mb-3 mt-3 mensaje"
-    >
+    <div th:if="${inactivo != null}" class="card text-white bg-success mb-3 mt-3 mensaje">
       <div class="card-body">
         <h5 class="card-title">Mensaje al Usuario</h5>
         <p class="card-text" th:text="${inactivo}"></p>
       </div>
     </div>
 
-    <h3 class="textbusq">Inicia Secion o Registrate segun corresponda</h3>
+    <h3 class="textbusq">Inicia Sesión o Registrate segun corresponda</h3>
     <div class="container2">
       <div class="left-side">
         <div class="box">
@@ -40,9 +35,7 @@
           <br />
           <br />
           <h4>¿Deseas ofrecer un servicio en específico?</h4>
-          <a th:href="@{/proveedor/registrar}" class="button"
-            >Registrate como Proveedor</a
-          >
+          <a th:href="@{/proveedor/registrar}" class="button">Registrate como Proveedor</a>
           <br />
         </div>
       </div>
@@ -55,29 +48,15 @@
 
           <div class="form-group my-3">
             <h6 class="textobox">Ingrese su Email</h6>
-            <input
-              type="email"
-              class="form-control"
-              name="email"
-              placeholder="EMAIL"
-            />
+            <input type="email" class="form-control" name="email" placeholder="EMAIL" />
           </div>
 
           <div class="form-group my-3">
             <h6 class="textobox">Ingrese su password</h6>
-            <input
-              type="password"
-              class="form-control"
-              name="password"
-              placeholder="CONTRASEÑA"
-            />
+            <input type="password" class="form-control" name="password" placeholder="CONTRASEÑA" />
           </div>
 
-          <button
-            type="submit"
-            class="btn btn-primary mt-3 botones"
-            id="botonr"
-          >
+          <button type="submit" class="btn btn-primary mt-3 botones" id="botonr">
             Ingresar!
           </button>
         </form>
@@ -86,9 +65,7 @@
     <section class="botonVolver">
       <div class="row mt-3">
         <div class="divVolver">
-          <a th:href="@{/login}" class="btn btn-secondary my-2 botonVolver botones"
-            >Login</a
-          >
+          <a th:href="@{/login}" class="btn btn-secondary my-2 botonVolver botones">Login</a>
         </div>
       </div>
     </section>
@@ -96,12 +73,11 @@
     <footer class="pie">
       <div th:replace="fragments/footer::foot"></div>
       <div th:replace="fragments/redesS::red_soc"></div>
-  </footer>
-</div>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-      crossorigin="anonymous"
-    ></script>
-  </body>
+    </footer>
+  </div>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"></script>
+</body>
+
 </html>
